@@ -6,9 +6,12 @@ ikiwiki (3.20110609) UNRELEASED; urgency=low
   * attachment: Speed up multiple file uploads by storing uploaded files
     in a staging area until the page is saved/previewed, rather than
     refreshing the site after each upload.
+    (Sponsored by The TOVA Company.)
   * attachment: Files can be dragged into the edit page to upload them.
-    Multiple file upload support. Upload progress bars.
-    Impemented using the jQuery-File-Upload widget.
+    Multiple file batch upload support. Upload progress bars.
+    AJAX special effects. Impemented using the jQuery-File-Upload widget.
+    (If you don't have javascript don't worry, I kept that working too.)
+    (Sponsored by The TOVA Company.)
 
  -- Joey Hess <joeyh@debian.org>  Thu, 09 Jun 2011 10:06:44 -0400
 
